Add README.md index.html styles.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        
+        <p class="fortune"></p>
+        <button class="button1">Click here to receive your fortune</button>
+
+        <script src="app.js"></script>
     </body>
 </html>
