--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <p class="fortune"></p>
-        <button class="button1">Click here to receive your fortune</button>
+        <h1 class="fortune-display">Click the button to receive your fortune.</h1>
+        <button class="button1">Click here!</button>
 
         <script src="app.js"></script>
     </body>
