Add README.md app.js index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1 class="fortune-display">Click the button to receive your fortune.</h1>
-        <button class="button1">Click here!</button>
+        <button class="button1" type="button">Click here!</button>
 
         <script src="app.js"></script>
     </body>
