Add README.md app.js index.html styles.css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1 class="fortune-display">Click the button to receive your fortune.</h1>
-        <button class="button1" type="button">Click here!</button>
-
+        <div class="getFortune">
+            <h1 class="fortune-display">Click the button to receive your fortune.</h1>
+            <button id="clickMe" type="button">Click Me!</button>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
