--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Fortunes</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css" />
+        <meta name="viewport" width="device-width, initial-scale 1.0" />
     </head>
     <body>
         <div class="getFortune">
