Add index.html styles.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Fortunes</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css" />
-        <meta name="viewport" width="device-width, initial-scale 1.0" />
+        <meta name="viewport" content="width=device-width" />
     </head>
     <body>
         <div class="getFortune">
